设置版本号

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "sudongxu/operation-log",
     "alias": "",
     "description": "dcat-admin操作日志记录，根据配置文件限制是否记录类型：【GET,POST,PUT,DELETE....】",
+    "version": "1.0.1",
     "type": "library",
     "keywords": ["dcat-admin", "extension"],
     "homepage": "https://github.com/sudongxu/operation-log",
